<resources>
    <string name="app_name">SportBro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Strings for app drawer -->
    <string name="Tracker">Tracker</string>
    <string name="DataLog">Data Log</string>
    <string name="Home">Home</string>
    <string name="nav_header_title">SportsBro</string>
    <string name="nav_header_subtitle">Made by some Sweat shop worker TM</string>

    <!--Strings for event dialog -->
    <string name="New_event">Add new event</string>
    <string name="Exc_type">exercise type</string>
    <string name="Length">Length</string>
    <string name="Kcal">Kcal burned</string>

    <!--Strings for exercise type -->
    <string-array name="sports_array">
        <item>Jogging</item>
        <item>Cardio</item>
        <item>Dancing</item>
        <item>Team sports</item>
    </string-array>

    <!--Strings for event list item -->
    <string name="date_list_item">Date: </string>
    <string name="Length_list_item">Length: </string>
    <string name="kcal_list_item">Kcal burned: </string>
    <string name="time_list_item">Date:  </string>

    <!--Strings for tracker -->
    <string name="end_workout">Finish workout</string>
    <string name="start_workout">Start workout</string>
    <string name="dialog_title_tracker">Paused</string>
    <string name="dialog_text_tracker">Do you want to save or continue</string>

</resources>
