<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/type_header_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jogging"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10">
    </TextView>

    <TextView
        android:id="@+id/lenght_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Length_list_item"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"
        android:paddingLeft="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/type_header_item"/>

    <TextView
        android:id="@+id/length_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60 min"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"
        android:paddingLeft="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/type_header_item"
        app:layout_constraintLeft_toRightOf="@+id/lenght_title"/>

    <TextView
        android:id="@+id/kcal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kcal_list_item"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"
        android:paddingLeft="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/lenght_title"/>

    <TextView
    android:id="@+id/kcal_list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="400 Kcal"
    android:fontFamily="sans-serif-medium"
    android:textColor="@color/colorAccent"
    android:textSize="@dimen/lbl_new_note_title"
    android:textStyle="normal"
    android:paddingLeft="@dimen/dimen_10"
    app:layout_constraintTop_toBottomOf="@+id/length_list_item"
    app:layout_constraintLeft_toRightOf="@+id/kcal_title"/>

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_list_item"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"
        android:paddingLeft="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/kcal_title"/>

    <TextView
        android:id="@+id/time_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 20-20-1018"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal"
        android:paddingLeft="@dimen/dimen_10"
        app:layout_constraintTop_toBottomOf="@+id/kcal_list_item"
        app:layout_constraintLeft_toRightOf="@+id/time_title"/>



</android.support.constraint.ConstraintLayout>